<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_marks_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_marks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_gravitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/gravitation"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_marks_logo" />

    <ImageView
        android:id="@+id/iv_gravitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_gravitation"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gravitation"
        app:layout_constraintStart_toEndOf="@+id/tv_gravitation"
        app:layout_constraintTop_toTopOf="@+id/tv_gravitation" />

    <TextView
        android:id="@+id/tv_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/chapter"
        android:textColor="@color/grey_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gravitation" />

    <TextView
        android:id="@+id/tv_showing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/showing"
        android:textColor="@color/grey_dark"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_attempted_unattempted"
        app:layout_constraintEnd_toStartOf="@+id/tv_attempted_unattempted" />

    <TextView
        android:id="@+id/tv_attempted_unattempted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_rectangle"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/unattempted"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_chapter" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/layout_shimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_showing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

            <include layout="@layout/item_shimmer" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_questions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_showing"
        tools:listitem="@layout/item_question" />

    <include
        android:id="@+id/layout_empty_placeholder"
        layout="@layout/layout_empty_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>